Second renderlayer doesnt render if first one has 'Use Surfaces' disabled. #41474

Closed
opened 2014-08-18 12:35:56 +02:00 by David Gascueña · 10 comments

System Information
Ubuntu 64 14.04, Nvidia GTX 460

Blender Version
Broken: official 2.71 and built e85bcfa (18-08-2014)

Short description of error
While trying to have a freestyle layer, and a normal one, I've found that if you disable 'Use surfaces' in the first renderlayer, it affects the second layer.

Exact steps for others to reproduce the error
layersBug.blend
Just render. The second layer should render fine, and it doesnt. If you disable the first renderlayer, the second one renders fine.

**System Information** Ubuntu 64 14.04, Nvidia GTX 460 **Blender Version** Broken: official 2.71 and built e85bcfa (18-08-2014) **Short description of error** While trying to have a freestyle layer, and a normal one, I've found that if you disable 'Use surfaces' in the first renderlayer, it affects the second layer. **Exact steps for others to reproduce the error** [layersBug.blend](https://archive.blender.org/developer/F104812/layersBug.blend) Just render. The second layer should render fine, and it doesnt. If you disable the first renderlayer, the second one renders fine.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DavidGascuena

Added subscriber: @DavidGascuena
Sergey Sharybin was assigned by Bastien Montagne 2014-08-18 14:47:57 +02:00

This issue was referenced by a6ae12aa62

This issue was referenced by a6ae12aa6267ed95cea92f4722a7545cdc4f34bd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a6ae12aa62.

Closed by commit a6ae12aa62.

Thanks again, Sergey!

Thanks again, Sergey!

Added subscriber: @storm_st

Added subscriber: @storm_st

I have noticed that few test .blend stop working in Cycles preview window, looks like it endlessly keep looping at BVH build phase, with text blinking about strands (no fur used in any problem files), and sometime it pop low res picture. I bisected it, and git bisevt point to this commit. I found that problem with objects that have no triangles, deleting/hiding them fix issue as well. I suspect that it related to "have_geometry" logic that now skip updating such objects but they still need to be updated (no idea why, just guessing).

I have noticed that few test .blend stop working in Cycles preview window, looks like it endlessly keep looping at BVH build phase, with text blinking about strands (no fur used in any problem files), and sometime it pop low res picture. I bisected it, and git bisevt point to this commit. I found that problem with objects that have no triangles, deleting/hiding them fix issue as well. I suspect that it related to "have_geometry" logic that now skip updating such objects but they still need to be updated (no idea why, just guessing).

Yes, this is reported in a separate report which is assigned to me.

Yes, this is reported in a separate report which is assigned to me.

It is fixed in 2a44844.

It is fixed in 2a44844.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41474
No description provided.