Fix T41474: Second renderlayer doesnt render if first one has 'Use Surfaces' disabled